# bevy_dialog_manager

./: .gitignore  Cargo.toml  README.md  justfile
assets/dialog/: example.toml  simple.toml
examples/simple/: main.rs
src/: lib.rs
src/nodes/: mod.rs  talk.rs
