[package]
name = "bevy_dialog_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bevy = { version = "0.16.1", default-features = false, features = ["bevy_asset", "bevy_log"] }
serde = { version = "1.0.219", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.16"
toml = "0.9.5"
